--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,15 +34,16 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     /* Firebase UI */
+    compile 'com.android.support:recyclerview-v7:+'
+    compile 'com.android.support:cardview-v7:+'
 
 
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
-    compile 'com.firebase:firebase-client-android:2.4.0'
-    compile 'com.firebaseui:firebase-ui:0.2.2'
-    compile 'com.android.support:cardview-v7:+'
-    compile 'com.android.support:recyclerview-v7:23.1.1'
+
+
 
     compile 'com.android.support:support-v4:23.1.1'
+
 
 }
